Update the logotipe and style

--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -362,3 +362,16 @@ footer .footer-links a:hover {
     color: white; /* Cor do texto, ajuste conforme necessário */
     text-align: center; /* Centraliza o texto */
 }
+
+.footer-content {
+    display: flex; /* Usar flexbox para alinhar os itens */
+    justify-content: space-between; /* Espaço entre os itens */
+    align-items: center; /* Alinha verticalmente */
+    width: 100%; /* Garante que o footer ocupe toda a largura */
+}
+
+.footer-logo {
+    margin-left: auto; /* Empurra a logo para o canto direito */
+    width: 100px; /* Ajuste o tamanho da logo conforme necessário */
+    height: auto; /* Mantém a proporção da imagem */
+}
