--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,35 @@ header {
     #menuToggle {
         display: block;
     }
+    
+    .menu ul {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background-color: #000;
+        flex-direction: column;
+        padding: 20px;
+        text-align: right; /* Alinha o texto à direita */
+    }
+
+    .menu ul.show {
+        display: flex;
+    }
+
+    .menu ul li {
+        margin: 10px 0;
+    }
+
+    #menuToggle {
+        display: block;
+        background: none;
+        border: none;
+        color: #00ff00;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
 }
 
 main, .sobre-nos, .nossos-servicos, .nossos-diferenciais {
@@ -239,6 +268,7 @@ footer .footer-links a:hover {
         background-color: #000;
         flex-direction: column;
         padding: 20px;
+        text-align: right; /* Alinha o texto à direita */
     }
 
     .menu ul.show {
